--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+
+    <!-- Base -->
+    <color name="white">#ffffff</color>
+    <color name="greyPale">#f5f5f5</color>
+    <color name="dark">#1d1d1d</color>
+
+    <!-- Theme -->
+    <color name="colorPrimary">#1aa19b</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
 </resources>
