--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <!-- Base -->
     <color name="white">#ffffff</color>
-    <color name="greyPale">#f5f5f5</color>
+    <color name="softGrey">#f5f5f5</color>
+    <color name="grey">#e4e4e4</color>
+    <color name="darkGrey">#7b7b7b</color>
     <color name="dark">#1d1d1d</color>
+    <color name="black">#000000</color>
 
     <!-- Theme -->
-    <color name="colorPrimary">#1aa19b</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
-
+    <color name="primary">#1aa19b</color>
+    <color name="primaryDark">#125350</color>
 </resources>
