--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,16 +8,17 @@
 
     <!-- Home -->
     <dimen name="profile_section_margins_top">18dp</dimen>
-    <item format="float" type="dimen" name="profile_section_weight">.25</item>
-    <item format="float" type="dimen" name="action_zone_section_weight">.55</item>
-    <item format="float" type="dimen" name="slides_indicatior_section_weight">.15</item>
+    <item name="profile_section_weight" format="float" type="dimen">.25</item>
+    <item name="action_zone_section_weight" format="float" type="dimen">.55</item>
+    <item name="slides_indicatior_section_weight" format="float" type="dimen">.15</item>
 
     <!-- Home : Profile -->
-    <item format="float" type="dimen" name="profile_settings_weight">.20</item>
-    <item format="float" type="dimen" name="profile_profile_weight">.60</item>
-    <item format="float" type="dimen" name="profile_tokens_weight">.20</item>
-
-
+    <item name="profile_settings_weight" format="float" type="dimen">.20</item>
+    <item name="profile_profile_weight" format="float" type="dimen">.60</item>
+    <item name="profile_tokens_weight" format="float" type="dimen">.20</item>
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
 
 
 </resources>
