Added sign in from google actitivity, just need to open activity....

--- a/app/src/main/res/layout/main_home.xml
+++ b/app/src/main/res/layout/main_home.xml
@@ -39,7 +39,8 @@
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="Profile"/>
+                android:text="Profile"
+                android:id="@+id/profile_button" />
 
         </LinearLayout>
 
