--- a/app/src/main/res/layout/activity_sign_in_out.xml
+++ b/app/src/main/res/layout/activity_sign_in_out.xml
@@ -10,6 +10,12 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="app.storyteller.sign_in_out">
 
+
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/sign_in_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <Button
         android:text=" Continue with my google acount"
         android:layout_width="wrap_content"
