--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -12,47 +12,47 @@
 
 
     <Button
-        android:text=" Continue with my google acount"
+        android:id="@+id/signIn_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="167dp"
-        android:id="@+id/Sign_In_button"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="167dp"
+        android:text=" Continue with my google acount"
+        android:visibility="invisible" />
 
     <Button
         android:text="I don't have a google account"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
         android:id="@+id/dont_have_account_button"
-        android:layout_below="@+id/Sign_In_button"
+        android:layout_below="@+id/signIn_button"
         android:layout_centerHorizontal="true" />
 
     <com.google.android.gms.common.SignInButton
             android:id="@+id/sign_in_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-        android:layout_marginTop="49dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/dont_have_account_button" />
+        android:layout_above="@+id/dont_have_account_button"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="51dp" />
 
     <Button
         android:text="Log Out"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tempSignOut_button"
-        android:layout_above="@+id/textView2"
-        android:layout_alignEnd="@+id/dont_have_account_button" />
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/sign_in_button"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="11dp"
         android:text="Create Profile"
         android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
         android:textSize="24sp"
-        android:id="@+id/textView2" />
+        android:id="@+id/textView2"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
