--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -12,47 +12,39 @@
 
 
     <Button
-        android:id="@+id/signIn_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="167dp"
-        android:text=" Continue with my google acount"
-        android:visibility="invisible" />
-
-    <Button
-        android:text="I don't have a google account"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/dont_have_account_button"
-        android:layout_below="@+id/signIn_button"
+        style="@style/AppTheme"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="146dp"
+        android:text="I don't have a google account"
+        android:layout_above="@+id/goToMain_button"
         android:layout_centerHorizontal="true" />
 
     <com.google.android.gms.common.SignInButton
             android:id="@+id/sign_in_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
         android:layout_above="@+id/dont_have_account_button"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="51dp" />
+        android:layout_centerHorizontal="true" />
 
     <Button
-        android:text="Log Out"
+        android:id="@+id/goToMain_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tempSignOut_button"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:text="Go to Main" />
 
     <TextView
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="11dp"
+        android:layout_above="@+id/sign_in_button"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="42dp"
+        android:fontFamily="serif"
         android:text="Create Profile"
-        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
-        android:textSize="24sp"
-        android:id="@+id/textView2"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.TabWidget" />
 </RelativeLayout>
