--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_sign_in_out"
     android:layout_width="match_parent"
@@ -14,10 +15,10 @@
     <Button
         android:id="@+id/dont_have_account_button"
         style="@style/AppTheme"
-        android:layout_width="wrap_content"
+        android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="146dp"
-        android:text="I don't have a google account"
+        android:text="I don't have a Google Account"
         android:layout_above="@+id/goToMain_button"
         android:layout_centerHorizontal="true" />
 
@@ -47,4 +48,13 @@
         android:fontFamily="serif"
         android:text="Create Profile"
         android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.TabWidget" />
+
+    <WebView
+        android:id="@+id/logo"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/textView2"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="16dp" />
+
 </RelativeLayout>
