--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -49,12 +49,10 @@
         android:text="Create Profile"
         android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.TabWidget" />
 
-    <WebView
+    <ImageView
         android:id="@+id/logo"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/textView2"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="16dp" />
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/logo" />
 
 </RelativeLayout>
