Mathieu 3/20/2017 : Rajout du profile picture dans mainScreen

--- a/app/src/main/res/layout/main_home.xml
+++ b/app/src/main/res/layout/main_home.xml
@@ -33,14 +33,16 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="@dimen/profile_profile_weight"
-            android:gravity="center_vertical|center_horizontal">
+            android:gravity="center_vertical|center_horizontal"
+            android:weightSum="1">
 
-            <Button
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="Profile"
-                android:id="@+id/profile_button" />
+
+            <WebView
+                android:id="@+id/webview_logo"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1" />
 
         </LinearLayout>
 
@@ -71,6 +73,10 @@
         android:background="@color/white">
 
 
+        <WebView
+            android:id="@+id/webview_play"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
     </LinearLayout>
 
 
