--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- Base -->
+    <!--  Base  -->
     <color name="white">#ffffff</color>
     <color name="softGrey">#f5f5f5</color>
-    <color name="grey">#e4e4e4</color>
-    <color name="darkGrey">#7b7b7b</color>
-
-    <!-- Theme -->
+    <color name="grey">#dadada</color>
+    <color name="darkGrey">#949494</color>
+    <color name="darkerGrey">#717171</color>
+    <!--  Theme  -->
     <color name="primary">#1aa19b</color>
 </resources>
