--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,25 +1,42 @@
 <resources>
-
-    <!-- StoryTeller Base -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!--<item name="colorWhite">@color/white</item>
-        <item name="colorSoftGrey">@color/softGrey</item>
-        <item name="colorDark">@color/dark</item>
-        <item name="colorPrimary">@color/primary</item>
-        <item name="colorPrimaryDark">@color/primaryDark</item>-->
+    <!--  StoryTeller Base  -->
+    <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
+        <!--
+        <item name="colorWhite">@color/white</item>
+                <item name="colorSoftGrey">@color/softGrey</item>
+                <item name="colorDark">@color/dark</item>
+                <item name="colorPrimary">@color/primary</item>
+                <item name="colorPrimaryDark">@color/primaryDark</item>
+        -->
+        <item name="android:background">@color/softGrey</item>
     </style>
 
-    <!-- Dialog -->
-    <style name="AppTheme.Dialog"></style>
+    <!--  SignIn  -->
+    <style name="AppTheme.SignIn"/>
+    <style name="AppTheme.SignIn.Activity">
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowNoTitle">true</item>
+    </style>
+    <style name="AppTheme.SignIn.Button" parent="Base.Widget.AppCompat.Button.Borderless">
+        <item name="android:paddingTop">18dp</item>
+        <item name="android:paddingBottom">18dp</item>
+        <item name="android:layout_marginTop">15dp</item>
+        <item name="android:background">@color/grey</item>
+        <item name="android:textColor">@color/darkGrey</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+    <!--  Dialog  -->
+    <style name="AppTheme.Dialog"/>
     <style name="AppTheme.Dialog.Title">
-        <item name="android:fontFamily">sans-serif</item> <!-- roboto light -->
+        <item name="android:fontFamily">sans-serif</item> <!--  roboto light  -->
         <item name="android:textColor">@color/primary</item>
         <item name="android:paddingBottom">22dp</item>
         <item name="android:textSize">32dp</item>
     </style>
 
     <style name="AppTheme.Dialog.Content">
-        <item name="android:layout_width">-1dp</item> <!-- Match parent -->
+        <item name="android:layout_width">-1dp</item><!--  Match parent  -->
     </style>
 
     <style name="AppTheme.Dialog.Content.Separator">
@@ -29,14 +46,15 @@
     </style>
 
     <style name="AppTheme.Dialog.Content.Button">
-        <item name="android:layout_height">-2dp</item> <!-- Wrap content -->
+        <item name="android:layout_height">-2dp</item><!--  Wrap content  -->
         <item name="android:layout_marginBottom">18dp</item>
         <item name="android:gravity">center_horizontal|center_vertical</item>
         <item name="android:background">@color/grey</item>
-
         <item name="android:textSize">18dp</item>
         <item name="android:textColor">@color/darkGrey</item>
-        <item name="android:fontFamily">sans-serif-thin</item> <!-- roboto thin -->
+        <item name="android:fontFamily">sans-serif-thin</item><!--  roboto thin  -->
     </style>
-
+    <style name="AppTheme.SignInText">
+        <item name="android:background">@color/grey</item>
+    </style>
 </resources>
