--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,6 +24,7 @@
         <item name="android:background">@color/grey</item>
         <item name="android:textColor">@color/darkGrey</item>
         <item name="android:textAllCaps">false</item>
+        <item name="android:fontFamily">sans-serif</item>
     </style>
 
     <!--  Dialog  -->
