--- a/app/src/main/res/layout/main_all_stories.xml
+++ b/app/src/main/res/layout/main_all_stories.xml
@@ -6,8 +6,9 @@
 
 
     <ListView
-        android:id="@android:id/list"
-        android:layout_width="wrap_content"
-        android:layout_height="567dp" />
-
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentTop="true"
+        android:id="@+id/listview" />
 </LinearLayout>
