--- a/app/src/main/res/layout/list_stories.xml
+++ b/app/src/main/res/layout/list_stories.xml
@@ -25,21 +25,65 @@ android:orientation="vertical">
         android:orientation="vertical"
         android:layout_margin="5dp">
 
-
-        <TextView
-            android:id="@+id/title"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:text="Titre"
-            android:textColor="@color/primary"/>
+            android:layout_height="wrap_content"
+            android:gravity="left">
 
+
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:text="Titre"
+                android:textColor="@color/primary"
+                android:singleLine="true"/>
+
+            <TextView
+                android:id="@+id/newStory"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:text="( NEW ! )"
+                android:textColor="@color/newStory"
+                android:layout_alignParentRight="true"/>
+
+
+        </RelativeLayout>
+
+        <!--
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:text="Titre"
+                android:textColor="@color/primary"/>
+
+            <TextView
+                android:id="@+id/newStory"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:text="( NEW ! )"
+                android:textColor="@color/newStory"/>
+
+
+        </LinearLayout>
+        -->
         <TextView
             android:id="@+id/smallDesc"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
-            android:text="Author: " />
+            android:text="Author: "
+            android:textColor="@color/darkerGrey"/>
 
     </LinearLayout>
 </LinearLayout>
