--- a/app/src/main/res/layout/main_all_stories.xml
+++ b/app/src/main/res/layout/main_all_stories.xml
@@ -11,5 +11,7 @@
         android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
         android:layout_alignParentTop="true"
-        android:id="@+id/listview" />
+        android:id="@+id/listview"
+        android:divider="@color/softGrey"
+        android:dividerHeight="1dp"/>
 </LinearLayout>
