tentative de show/hide action bar dans le view de stories

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
     <!--
       ~~ StoryTeller Base : AppTheme.
       -->
-    <style name="AppTheme" parent="Theme.AppCompat.NoActionBar"/>
+    <style name="AppTheme" parent="Theme.AppCompat.Light"/>
 
     <!--
       ~~ Activity
