--- a/app/src/main/res/layout/activity_loading_screen.xml
+++ b/app/src/main/res/layout/activity_loading_screen.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/activity_loading_screen"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -9,10 +8,11 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
-        tools:context="app.storyteller.AuthenticationActivity">
+        android:screenOrientation="portrait"
+        style="@style/AppTheme.Activity">
 
     <WebView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/loading_logo"/>
-</RelativeLayout>
+            android:id="@+id/loading_screen" />
+</LinearLayout>
