--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/mainActivity"
-    android:screenOrientation="portrait">
+    android:screenOrientation="portrait"
+    style="@style/AppTheme.Activity">
 
 </android.support.v4.view.ViewPager>
