- Added loading Screen. - Added StoryChooserActivity.

--- a/app/src/main/res/layout/main_home.xml
+++ b/app/src/main/res/layout/main_home.xml
@@ -58,6 +58,7 @@
             android:background="@color/primary">
 
             <Button
+                android:id="@+id/tokens"
                 android:layout_width="60dp"
                 android:layout_height="wrap_content"
                 android:text="tokens"/>
