--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
     <!--
       ~~ StoryTeller Base : AppTheme.
       -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light"/>
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar"/>
 
     <!--
       ~~ Activity
@@ -21,6 +21,28 @@
         <item name="android:textColor">@color/darkGrey</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:fontFamily">sans-serif</item>
+    </style>
+
+    <!--
+      ~~ Activity - Header
+      -->
+    <style name="AppTheme.Activity.Header">
+        <item name="android:background">@color/primary</item>
+        <item name="android:paddingTop">@dimen/header_vertical_padding</item>
+        <item name="android:paddingBottom">@dimen/header_vertical_padding</item>
+        <item name="android:paddingLeft">@dimen/header_horizontal_padding</item>
+        <item name="android:paddingRight">@dimen/header_horizontal_padding</item>
+    </style>
+    <style name="AppTheme.Activity.Header.Title">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:fontFamily">sans-serif-thin</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:padding">1dp</item>
+    </style>
+    <style name="AppTheme.Activity.Header.BackBtn">
+        <item name="android:layout_width">@dimen/header_back_btn_width</item>
+        <item name="android:layout_height">@dimen/header_back_btn_height</item>
+        <item name="android:layout_marginRight">30dp</item>
     </style>
 
     <!--
