--- a/app/src/main/res/layout/activity_story_chooser.xml
+++ b/app/src/main/res/layout/activity_story_chooser.xml
@@ -31,7 +31,22 @@
 
 
     <!-- Filters -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/header_horizontal_padding"
+        android:paddingRight="@dimen/header_horizontal_padding"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:gravity="right">
 
+        <!-- Select box -->
+        <Spinner
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+        </Spinner>
+    </LinearLayout>
 
     <!-- Recent Stories -->
     <RelativeLayout
