--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="grey">#dadada</color>
     <color name="darkGrey">#949494</color>
     <color name="darkerGrey">#717171</color>
+    <color name="dark">#303030</color>
+    <color name="black">#181818</color>
     <color name="newStory">#deb92c</color>
     <!--  Theme  -->
     <color name="primary">#1aa19b</color>
